# rpa-recorder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RPA-RECORDER-RUNBOOK.md  SECURITY.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  run.py
.github/: codecov.yml
.github/actions/setup-browser/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: README.md  ci.yml  llm-tests.yml
docs/: architecture.md  build-plan.md  configuration.md  github-workflow-checklist.md  glossary.md  implementation-bootstrap.md  m10-recovery-engine.md  m11-confirmation-workflow.md  m11.5-workers-and-medallion-promotion.md  m12-fastapi-control-plane.md  m13-github-actions-ci.md  m14-documentation-polish.md  m6.5-page-scripts-and-bronze.md  m7-heuristic-classifier.md  m8-cli-commands.md  m9-llm-classifier.md  medallion-and-workers.md
docs/_archive/: enhance-milestone-plans.md  m1-project-scaffold.md  m2-data-models.md  m3-browser-session.md  m4-recorder.md  m5-storage-layer.md  m6-executor.md
docs/bash/: 00-setup.sh  01-explore.sh  02-impact-analysis.sh  03-lint.sh  04-typecheck.sh  05-test.sh  06-check.sh  07-run-app.sh  08-git-workflow.sh  09-deps.sh  10-playwright.sh  11-data-inspect.sh  README.md
examples/: selenium_demo.py
src/rpa_recorder/: __init__.py  __main__.py  cli.py  config.py
src/rpa_recorder/api/: README.md  __init__.py  app.py  lifespan.py  routes.py
src/rpa_recorder/api/dependencies/: __init__.py  config.py  db.py  queue.py  redis.py  ws_manager.py
src/rpa_recorder/api/middleware/: __init__.py  backpressure.py  rate_limit.py  request_id.py  structured_logging.py
src/rpa_recorder/api/routers/: __init__.py  health.py  medallion.py  recordings.py  replay.py  runs.py  streaming.py
src/rpa_recorder/api/schemas/: __init__.py  errors.py  events.py  medallion.py  recording.py  run.py
src/rpa_recorder/api/streaming/: __init__.py  manager.py
src/rpa_recorder/assets/: __init__.py  recorder_inject.js
src/rpa_recorder/browser/: README.md  __init__.py  executor.py  recorder.py  session.py
src/rpa_recorder/classifier/: README.md  __init__.py  heuristic.py  llm.py
src/rpa_recorder/classifier/heuristic/: __init__.py  engine.py  protocol.py
src/rpa_recorder/classifier/llm/: __init__.py  cache.py  classifier.py  concurrency.py  cost.py  hybrid.py  merge.py  protocol.py  retry.py
src/rpa_recorder/cli/: README.md  __init__.py  app.py  async_runner.py  console.py  dependencies.py  errors.py  params.py
src/rpa_recorder/cli/commands/: __init__.py  classify.py  confirm.py  list_recordings.py  medallion.py  record.py  replay.py  serve.py  show.py  worker.py
src/rpa_recorder/cli/output/: __init__.py  recording.py  run.py
src/rpa_recorder/confirmation/: README.md  __init__.py  protocol.py  runner.py
src/rpa_recorder/confirmation/filters/: __init__.py  below_threshold.py  by_intent.py  failed_on_replay.py  since_date.py  unconfirmed_only.py
src/rpa_recorder/confirmation/modes/: __init__.py  diff_baseline.py  overview.py  per_action.py  per_intent_batch.py
src/rpa_recorder/confirmation/renderers/: __init__.py  compact.py  detailed.py  side_by_side.py
src/rpa_recorder/integration/: README.md  __init__.py  events.py  session.py  translator.py
src/rpa_recorder/medallion/: README.md  __init__.py  bronze.py  bronze_store.py  compact.py  gold_cold.py  gold_hot.py  paths.py  retention.py  silver.py
src/rpa_recorder/models/: README.md  __init__.py  actions.py  execution.py  llm.py  recording.py
src/rpa_recorder/page_scripts/: README.md  __init__.py
src/rpa_recorder/page_scripts/recorder/: __init__.py  a11y_tree.js  dom_snapshot.js  inject.js
src/rpa_recorder/page_scripts/replay/: __init__.py  locator_healing.js  modal_detector.js
src/rpa_recorder/page_scripts/shared/: __init__.py  selectors.js  text_utils.js
src/rpa_recorder/queues/: README.md  __init__.py  arq.py  events.py  in_process.py  protocol.py  replay_handler.py
src/rpa_recorder/recovery/: README.md  __init__.py  engine.py  protocol.py  strategies.py
src/rpa_recorder/recovery/parsers/: __init__.py  selector_tool_use.py
src/rpa_recorder/recovery/prompts/: __init__.py  reselect_v1.py
src/rpa_recorder/storage/: README.md  __init__.py  db.py  repositories.py
src/rpa_recorder/workers/: README.md  __init__.py  settings.py
tests/: conftest.py  test_api_app.py  test_api_dependencies.py  test_api_lifespan.py  test_api_middleware_backpressure.py  test_api_middleware_rate_limit.py  test_api_middleware_request_id.py  test_api_middleware_structured_logging.py  test_api_routers_health.py  test_api_routers_medallion.py  test_api_routers_recordings.py  test_api_routers_replay.py  test_api_routers_runs.py  test_api_streaming_manager.py  test_bronze_store.py  test_bronze_writes.py  test_cli_async_runner.py  test_cli_classify.py  test_cli_confirm.py  test_cli_list_show.py  test_cli_medallion.py  test_cli_output.py  test_cli_params.py  test_cli_record.py  test_cli_replay.py  test_cli_serve.py  test_cli_worker.py  test_confirmation_filters.py  test_confirmation_modes.py  test_confirmation_protocol.py  test_confirmation_renderers.py  test_confirmation_runner.py  test_executor.py  test_executor_event_emitter.py  test_heuristic_classifiers.py  test_heuristic_engine.py  test_heuristic_filters.py  test_heuristic_normalizers.py  test_heuristic_protocol.py  test_llm_anthropic_backend.py  (+32 more)
tests/integration/: test_ingest_session_async.py  test_ingest_session_sync.py  test_public_api.py  test_translator.py
(+39 files in other folders)
