[project]
name = "rpa-recorder"
version = "0.1.0"
description = "Browser-based RPA tool with semantic recording, classification, and resilient replay."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Matthew Mulé", email = "matthew.j.mule@outlook.com" },
]
keywords = ["rpa", "automation", "playwright", "browser", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.49",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.13",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "anthropic>=0.39",
    "structlog>=24.4",
    "rich>=13.9",
    "aiofiles>=24",
    # M12 control plane.
    "redis>=5.0",
    "httpx>=0.27",
    # arq deferred to M11.5; see queues/protocol.py.
    "pyarrow>=24.0.0",
    "duckdb>=1.5.2",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]

[project.scripts]
rpa = "rpa_recorder.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-playwright>=0.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-setuptools",
    "pre-commit>=4.0",
    "types-aiofiles>=25.1.0.20260409",
    # M12 control plane test fixtures.
    "fakeredis[lua]>=2.20",
    "asgi-lifespan>=2.1",
    "httpx-ws>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpa_recorder"]


# ---------- Ruff ----------

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF",
    "ASYNC", "S", "PTH", "TCH", "PL", "RET", "ARG", "ERA",
]
ignore = [
    "E501",     # line length (formatter handles it)
    "PLR0913",  # too many arguments
    "S101",     # asserts are fine in tests
    "PLR2004",  # magic values
]

[tool.ruff.lint.per-file-ignores]
# Tests freely use small sync I/O for assertions; ASYNC240 (no Path methods in
# async fns) is too strict for tiny .exists() checks. PLC0415 is relaxed for
# tests because narrow imports inside test bodies are common.
"tests/**/*.py" = ["S", "ARG", "PLR", "ASYNC240", "PLC0415"]
"src/rpa_recorder/cli/**/*.py" = ["B008"]  # typer uses B008 by design
# FastAPI requires `Request`, `WebSocket`, `UUID` (path params), and
# `Depends(...)` to be evaluated at runtime so the framework can introspect
# parameter annotations.
"src/rpa_recorder/api/dependencies/*.py" = ["TC002"]
"src/rpa_recorder/api/routers/*.py" = ["B008", "TC002", "TC003"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic, pydantic-settings, and SQLAlchemy ORM all introspect class
# annotations at runtime; keep their base-class subtype imports eagerly
# available rather than gated under TYPE_CHECKING.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
]

[tool.ruff.lint.isort]
known-first-party = ["rpa_recorder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


# ---------- mypy ----------

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
warn_no_return = true
pretty = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["playwright.*"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


# ---------- pytest ----------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=rpa_recorder",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring a real browser",
    "llm: marks tests that call the Anthropic API",
    "worker: marks tests that need a Redis service running",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:playwright.*",
]


# ---------- coverage ----------

[tool.coverage.run]
branch = true
source = ["src/rpa_recorder"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
show_missing = true
skip_covered = false


# ---------- uv ----------

[tool.uv]
default-groups = ["dev"]
